fix(CB-179): change overflow hidden to overflow-x clip; add user-select none

--- a/src/includes/product-page/components/background/_background.scss
+++ b/src/includes/product-page/components/background/_background.scss
@@ -24,6 +24,9 @@ body[data-theme="light"] {
 
         object-fit: cover;
         width: 100%;
+
+        pointer-events: none;
+        user-select: none;
     }
 }
 
