--- a/src/includes/product-page/components/roadmap/_roadmap.scss
+++ b/src/includes/product-page/components/roadmap/_roadmap.scss
@@ -115,6 +115,9 @@ body[data-theme="light"] {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+
+        user-select: none;
+        pointer-events: none;
     }
 }
 
